MDEV-8441 Bad SHOW CREATE TABLE output for a table with a virtual column